--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "wiredep": "~2.2.0",
     "karma-jasmine": "~0.3.1",
     "karma-phantomjs-launcher": "~0.1.4",
+    "karma-firefox-launcher": "~0.1",
     "require-dir": "~0.1.0",
     "browser-sync": "~1.7.1",
     "http-proxy": "~1.7.0",
