--- a/bower.json
+++ b/bower.json
@@ -2,17 +2,17 @@
   "name": "angular-boilerplate",
   "version": "0.0.0",
   "dependencies": {
-    "angular-touch": "~1.3.4",
+    "angular-touch": "~1.4.0",
     "restangular": "~1.4.0",
     "angular-ui-router": "~0.2.13",
     "bootstrap-sass-official": "~3.3.1",
-    "angular-bootstrap": "0.12.x",
-    "angular": "~1.3.4"
+    "angular-bootstrap": "~0.12.1",
+    "angular": "~1.3.13"
   },
   "devDependencies": {
-    "angular-mocks": "~1.3.4"
+    "angular-mocks": "~1.3.13"
   },
   "resolutions": {
-    "angular": "~1.3.4"
+    "angular": "~1.3.13"
   }
 }
