--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gulp-filter": "~2.0.2",
     "gulp-flatten": "~0.0.4",
     "gulp-jshint": "~1.9.0",
+    "gulp-jscs": "~1.4.0",
     "gulp-load-plugins": "~0.8.1",
     "gulp-size": "~1.2.1",
     "gulp-uglify": "~1.1.0",
