Configure ci task with gulp for coding standards and tests.

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ before_script:
     - npm install
     - bower install
 
-script: gulp && gulp test && gulp protractor && gulp protractor:dist
+script: gulp && gulp ci
