--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-uglify": "~1.1.0",
     "gulp-useref": "~1.1.1",
     "gulp-ng-annotate": "~0.5.2",
+    "gulp-param": "^0.6.3",
     "gulp-replace": "~0.5.0",
     "gulp-rename": "~1.2.0",
     "gulp-rev": "~3.0.1",
