--- a/package.json
+++ b/package.json
@@ -3,46 +3,51 @@
   "version": "0.0.0",
   "dependencies": {},
   "devDependencies": {
-    "gulp": "~3.8.11",
-    "gulp-autoprefixer": "~2.1.0",
-    "gulp-angular-templatecache": "~1.5.0",
+    "browser-sync": "~1.9.1",
+    "chalk": "~1.0.0",
     "del": "~1.1.0",
+    "gulp": "~3.8.11",
+    "gulp-angular-filesort": "~1.1.1",
+    "gulp-angular-templatecache": "~1.5.0",
+    "gulp-autoprefixer": "~2.1.0",
     "gulp-consolidate": "~0.1.2",
     "gulp-csso": "~1.0.0",
     "gulp-filter": "~2.0.2",
     "gulp-flatten": "~0.0.4",
-    "gulp-jshint": "~1.9.0",
+    "gulp-inject": "~1.2.0",
     "gulp-jscs": "~1.4.0",
+    "gulp-jshint": "~1.9.0",
+    "gulp-karma": "~0.0.4",
     "gulp-load-plugins": "~0.8.1",
+    "gulp-minify-html": "~1.0.1",
+    "gulp-ng-annotate": "~0.5.2",
+    "gulp-param": "^0.6.3",
+    "gulp-protractor": "~0.0.11",
+    "gulp-rename": "~1.2.0",
+    "gulp-replace": "~0.5.0",
+    "gulp-rev": "~3.0.1",
+    "gulp-rev-replace": "~0.4.0",
+    "gulp-sass": "~1.1.0",
     "gulp-size": "~1.2.1",
     "gulp-uglify": "~1.1.0",
     "gulp-useref": "~1.1.1",
-    "gulp-ng-annotate": "~0.5.2",
-    "gulp-param": "^0.6.3",
-    "gulp-replace": "~0.5.0",
-    "gulp-rename": "~1.2.0",
-    "gulp-rev": "~3.0.1",
-    "gulp-rev-replace": "~0.4.0",
-    "gulp-minify-html": "~1.0.1",
-    "gulp-inject": "~1.2.0",
-    "gulp-protractor": "~0.0.11",
-    "gulp-karma": "~0.0.4",
-    "gulp-sass": "~1.1.0",
-    "gulp-angular-filesort": "~1.1.1",
-    "main-bower-files": "~2.5.0",
+    "http-proxy": "~1.8.1",
     "jshint-stylish": "~1.0.0",
-    "wiredep": "~2.2.0",
+    "karma": "^0.13.22",
+    "karma-firefox-launcher": "~0.1.4",
     "karma-jasmine": "~0.3.1",
     "karma-phantomjs-launcher": "~0.1.4",
-    "karma-firefox-launcher": "~0.1.4",
-    "require-dir": "~0.1.0",
-    "browser-sync": "~1.9.1",
-    "http-proxy": "~1.8.1",
-    "chalk": "~1.0.0",
+    "karma-spec-reporter": "0.0.26",
+    "main-bower-files": "~2.5.0",
     "protractor": "~1.8.0",
-    "uglify-save-license": "~0.4.1"
+    "require-dir": "~0.1.0",
+    "uglify-save-license": "~0.4.1",
+    "wiredep": "~2.2.0"
   },
   "engines": {
     "node": ">=0.10.0"
+  },
+  "scripts": {
+    "postinstall": "./node_modules/protractor/bin/webdriver-manager update"
   }
 }
