--- a/bower.json
+++ b/bower.json
@@ -2,18 +2,18 @@
   "name": "angular-boilerplate",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "~1.4.9",
-    "angular-mocks": "~1.4.9",
+    "angular": "~1.5.5",
     "angular-bootstrap": "^1.3.2",
     "restangular": "^1.5.2",
     "angular-touch": "^1.5.5",
     "angular-ui-router": "^0.2.18",
-    "bootstrap-sass": "3.3.3"
+    "bootstrap-sass": "3.3.3",
+    "angular-mocks": "~1.5.5"
   },
   "devDependencies": {
     "jquery": "^2.2.3"
   },
   "resolutions": {
-    "angular": "~1.4.9"
+    "angular": "~1.5.5"
   }
 }
