--- a/bower.json
+++ b/bower.json
@@ -2,17 +2,18 @@
   "name": "angular-boilerplate",
   "version": "0.0.0",
   "dependencies": {
-    "angular-touch": "~1.4.0",
-    "restangular": "~1.4.0",
-    "angular-ui-router": "~0.2.13",
-    "bootstrap-sass-official": "~3.3.1",
-    "angular-bootstrap": "~0.12.1",
-    "angular": "~1.3.13"
+    "angular": "~1.3.20",
+    "angular-bootstrap": "~0.13.4",
+    "restangular": "~1.5.1",
+    "angular-touch": "~1.3.20",
+    "angular-ui-router": "~0.2.15",
+    "bootstrap-sass": "3.3.3",
+    "angular-mocks": "~1.3.20"
   },
   "devDependencies": {
-    "angular-mocks": "~1.3.13"
+    "jquery": "~2.2.0"
   },
   "resolutions": {
-    "angular": "~1.3.13"
+    "angular": "~1.3.20"
   }
 }
