--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "http-proxy": "~1.8.1",
     "jshint-stylish": "^2.1.0",
     "karma": "^0.13.22",
+    "karma-chrome-launcher": "^0.2.3",
     "karma-firefox-launcher": "~0.1.4",
     "karma-jasmine": "~0.3.1",
     "karma-phantomjs-launcher": "^1.0.0",
